--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "php": ">=5.6.28",
     "filp/whoops":"*",
     "hassankhan/config":"*",
-    "monolog/monolog":"*"
+    "monolog/monolog":"*",
+    "league/plates": "*"
   },
   "repositories": {
     "packagist": {
