--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     "php": ">=5.6.28",
     "filp/whoops":"*",
     "hassankhan/config":"*",
-    "monolog/monolog":"*",
-    "league/plates": "*"
+    "monolog/monolog":"*"
   },
   "repositories": {
     "packagist": {
@@ -17,5 +16,6 @@
     }
   },
   "require-dev": {
+    "phpunit/phpunit": "^6.4"
   }
 }
